Fixes to blockquote on mobile so it is more viewable and fix to header so it doesn't appear behind things.

--- a/_sass/device.scss
+++ b/_sass/device.scss
@@ -19,6 +19,10 @@
         section {
             margin-top: 48px;
             width: 100%;
+
+            blockquote {
+                margin: 20px 0px;
+            }
         }
 
         .sidebar {
