--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -6,6 +6,7 @@ header {
     top: 0px;
     left: 0px;
     min-height: 48px;
+    z-index: 1;
 
     img {
         height: 48px;
